kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-repository
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-repository
  template:
    metadata:
      labels:
        app: inventory-repository
      annotations:
        gke-gcsfuse/volumes: "true"
    spec:
      containers:
        - name: inventory-repository
          image: 'europe-southwest1-docker.pkg.dev/cloud-computing-project-416422/brewstand-repo/inventory_repository:latest'
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "100Mi"
              cpu: "200m"
            limits:
              memory: "100Mi"
              cpu: "200m"
          ports:
            - containerPort: 50062
          volumeMounts:
            - name: brewstand-dataset
              mountPath: /data
              readOnly: true
      serviceAccountName: brewstand-sa
      volumes:
        - name: brewstand-dataset
          persistentVolumeClaim:
            claimName: brewstand-dataset-pvc
            readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-repository
  labels:
    app: inventory-repository
spec:
  type: ClusterIP
  ports:
    - port: 50062
  selector:
    app: inventory-repository
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
        - name: inventory-service
          image: 'europe-southwest1-docker.pkg.dev/cloud-computing-project-416422/brewstand-repo/inventory_service:latest'
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "100Mi"
              cpu: "200m"
            limits:
              memory: "100Mi"
              cpu: "200m"
          ports:
            - containerPort: 50052
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  labels:
    app: inventory-service
spec:
  type: ClusterIP
  ports:
    - port: 50052
  selector:
    app: inventory-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-controller
  template:
    metadata:
      labels:
        app: inventory-controller
    spec:
      containers:
        - name: inventory-controller
          image: 'europe-southwest1-docker.pkg.dev/cloud-computing-project-416422/brewstand-repo/inventory_controller:latest'
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "100Mi"
              cpu: "300m"
            limits:
              memory: "100Mi"
              cpu: "300m"
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-controller
  labels:
    app: inventory-controller
spec:
  type: ClusterIP
  ports:
    - port: 3001
  selector:
    app: inventory-controller
