kubernetes/inventory_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: 'postgres:latest'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdata
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: postgres-volume-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-repository
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-repository
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: inventory-repository
      annotations:
        gke-gcsfuse/volumes: "true"
    spec:
      containers:
        - name: inventory-repository
          image: 'europe-southwest1-docker.pkg.dev/cloud-computing-project-416422/brewstand-repo/inventory_repository:latest'
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "100Mi"
              cpu: "50m"
          ports:
            - containerPort: 50062
          volumeMounts:
            - name: brewstand-dataset
              mountPath: /data
              readOnly: true
          livenessProbe:
            tcpSocket:
              port: 50062
            periodSeconds: 15
            initialDelaySeconds: 60
            failureThreshold: 5
      serviceAccountName: brewstand-sa
      volumes:
        - name: brewstand-dataset
          persistentVolumeClaim:
            claimName: brewstand-dataset-pvc
            readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-repository
  labels:
    app: inventory-repository
spec:
  type: ClusterIP
  ports:
    - port: 50062
  selector:
    app: inventory-repository
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
        - name: inventory-service
          image: 'europe-southwest1-docker.pkg.dev/cloud-computing-project-416422/brewstand-repo/inventory_service:latest'
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "100Mi"
              cpu: "50m"
          ports:
            - containerPort: 50052
          livenessProbe:
            tcpSocket:
              port: 50052
            periodSeconds: 15
            initialDelaySeconds: 60
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  labels:
    app: inventory-service
spec:
  type: ClusterIP
  ports:
    - port: 50052
  selector:
    app: inventory-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-controller
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: inventory-controller
    spec:
      containers:
        - name: inventory-controller
          image: 'europe-southwest1-docker.pkg.dev/cloud-computing-project-416422/brewstand-repo/inventory_controller:latest'
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "100Mi"
              cpu: "50m"
          ports:
            - containerPort: 3001
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            periodSeconds: 15
            initialDelaySeconds: 60
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-controller
  labels:
    app: inventory-controller
spec:
  type: NodePort
  ports:
    - port: 3001
  selector:
    app: inventory-controller
