kubernetes/order_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-controller
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: order-controller
    spec:
      containers:
        - name: order-controller
          image: 'europe-southwest1-docker.pkg.dev/cloud-computing-project-416422/brewstand-repo/order_controller:latest'
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "100Mi"
              cpu: "50m"
          ports:
            - containerPort: 3004
          livenessProbe:
            httpGet:
              path: /
              port: 3004
            periodSeconds: 12
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3004
            periodSeconds: 11
          startupProbe:
            httpGet:
              path: /
              port: 3004
          failureThreshold: 30
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: order-controller
  labels:
    app: order-controller
spec:
  type: ClusterIP
  ports:
    - port: 3004
  selector:
    app: order-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: 'europe-southwest1-docker.pkg.dev/cloud-computing-project-416422/brewstand-repo/order_service:latest'
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "100Mi"
              cpu: "50m"
          ports:
            - containerPort: 50054
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  type: ClusterIP
  ports:
    - port: 50054
  selector:
    app: order-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-repository
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-repository
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: order-repository
    spec:
      containers:
        - name: order-repository
          image: 'europe-southwest1-docker.pkg.dev/cloud-computing-project-416422/brewstand-repo/order_repository:latest'
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "100Mi"
              cpu: "50m"
          ports:
            - containerPort: 50064
---
apiVersion: v1
kind: Service
metadata:
  name: order-repository
  labels:
    app: order-repository
spec:
  type: ClusterIP
  ports:
    - port: 50064
  selector:
    app: order-repository
