kubernetes/payment_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-controller
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: payment-controller
    spec:
      containers:
        - name: payment-controller
          image: 'europe-southwest1-docker.pkg.dev/cloud-computing-project-416422/brewstand-repo/payment_controller:latest'
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "100Mi"
              cpu: "50m"
          ports:
            - containerPort: 3005
          livenessProbe:
            httpGet:
              path: /
              port: 3005
            periodSeconds: 12
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3005
            periodSeconds: 11
          startupProbe:
            httpGet:
              path: /
              port: 3005
            failureThreshold: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: payment-controller
  labels:
    app: payment-controller
spec:
  type: ClusterIP
  ports:
    - port: 3005
  selector:
    app: payment-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: 'europe-southwest1-docker.pkg.dev/cloud-computing-project-416422/brewstand-repo/payment_service:latest'
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "100Mi"
              cpu: "50m"
          ports:
            - containerPort: 50055
          livenessProbe:
            tcpSocket:
              port: 50055
            periodSeconds: 12
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: 50055
            periodSeconds: 11
          startupProbe:
            tcpSocket:
              port: 50055
            failureThreshold: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    app: payment-service
spec:
  type: ClusterIP
  ports:
    - port: 50055
  selector:
    app: payment-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-repository
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-repository
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: payment-repository
    spec:
      containers:
        - name: payment-repository
          image: 'europe-southwest1-docker.pkg.dev/cloud-computing-project-416422/brewstand-repo/payment_repository:latest'
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "100Mi"
              cpu: "50m"
          ports:
            - containerPort: 50065
          livenessProbe:
            tcpSocket:
              port: 50065
            periodSeconds: 12
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: 50065
            periodSeconds: 11
          startupProbe:
            tcpSocket:
              port: 50065
            failureThreshold: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: payment-repository
  labels:
    app: payment-repository
spec:
  type: ClusterIP
  ports:
    - port: 50065
  selector:
    app: payment-repository
