kubernetes/review_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-controller
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: review-controller
    spec:
      containers:
        - name: review-controller
          image: 'europe-southwest1-docker.pkg.dev/cloud-computing-project-416422/brewstand-repo/review_controller:latest'
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "100Mi"
              cpu: "50m"
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: review-controller
  labels:
    app: review-controller
spec:
  type: ClusterIP
  ports:
    - port: 3003
  selector:
    app: review-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-service
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: review-service
    spec:
      containers:
        - name: review-service
          image: 'europe-southwest1-docker.pkg.dev/cloud-computing-project-416422/brewstand-repo/review_service:latest'
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "100Mi"
              cpu: "50m"
          ports:
            - containerPort: 50053
---
apiVersion: v1
kind: Service
metadata:
  name: review-service
  labels:
    app: review-service
spec:
  type: ClusterIP
  ports:
    - port: 50053
  selector:
    app: review-service
