kubernetes/user_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-controller
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: user-controller
    spec:
      containers:
        - name: user-controller
          image: 'europe-southwest1-docker.pkg.dev/cloud-computing-project-416422/brewstand-repo/user_controller:latest'
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "100Mi"
              cpu: "50m"
          ports:
            - containerPort: 3002
          livenessProbe:
            httpGet:
              path: /
              port: 3002
            periodSeconds: 12
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3002
            periodSeconds: 11
          startupProbe:
            httpGet:
              path: /
              port: 3002
            failureThreshold: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: user-controller
  labels:
    app: user-controller
spec:
  type: NodePort
  ports:
    - port: 3002
  selector:
    app: user-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: 'europe-southwest1-docker.pkg.dev/cloud-computing-project-416422/brewstand-repo/user_service:latest'
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "100Mi"
              cpu: "50m"
          ports:
            - containerPort: 50051
          livenessProbe:
            tcpSocket:
              port: 50051
            periodSeconds: 12
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: 50051
            periodSeconds: 11
          startupProbe:
            tcpSocket:
              port: 50051
            failureThreshold: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  type: ClusterIP
  ports:
    - port: 50051
  selector:
    app: user-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-repository
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-repository
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: user-repository
    spec:
      containers:
        - name: user-repository
          image: 'europe-southwest1-docker.pkg.dev/cloud-computing-project-416422/brewstand-repo/user_repository:latest'
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "100Mi"
              cpu: "50m"
          ports:
            - containerPort: 50061
          livenessProbe:
            tcpSocket:
              port: 50061
            periodSeconds: 12
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: 50061
            periodSeconds: 11
          startupProbe:
            tcpSocket:
              port: 50061
            failureThreshold: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: user-repository
  labels:
    app: user-repository
spec:
  type: ClusterIP
  ports:
    - port: 50061
  selector:
    app: user-repository
